Add BFT support + application ACL change
